[package]
name = "git-contrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for profiling
[profile.release]
debug = 1
[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[dependencies]
anyhow = "1.0.75"
async-executor = "1.5.4"
chashmap = "2.2.2"
crossbeam-channel = "0.5.8"
easy-parallel = "3.3.1"
futures-lite = "1.13.0"
derive_more = "0.99.17"
git2 = "0.18.1"
csv = "1.3.0"
